set(PACKET_LIB_NAME "PacketLib")
set(PACKET_LIB_HEADERS "${PACKET_LIB_NAME}_HEADERS")
set(PACKET_LIB_SOURCES "${PACKET_LIB_NAME}_SOURCES")

file(GLOB_RECURSE PACKET_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE PACKET_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_library(${PACKET_LIB_NAME} ${PACKET_LIB_SOURCES} ${PACKET_LIB_HEADERS})
add_library(${PROJECT_NAME}::${PACKET_LIB_NAME} ALIAS ${PACKET_LIB_NAME})

set_target_properties(${PACKET_LIB_NAME} PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED YES
        CXX_EXTENSIONS NO)

target_link_libraries(${PACKET_LIB_NAME} PRIVATE ${PROJECT_NAME}::ProjectSettings)

target_include_directories(${PACKET_LIB_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
